// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailCounter renders a counter with a pluralized label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 aYENS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jcMcey"
      >
        <div
          class="sc-TtZnY dDiQmU sc-jHNicF dneNot"
        >
          <span
            aria-label="35 dogs"
            class="StyledText-sc-1sadyjn-0 cPxXuL"
          >
            35
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fTVibh sc-cdlubJ jPQraZ"
      >
        dogs
      </span>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailCounter renders a simple counter 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 aYENS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jcMcey"
      >
        <div
          class="sc-TtZnY dDiQmU sc-jHNicF dneNot"
        >
          <span
            aria-label="1 dog"
            class="StyledText-sc-1sadyjn-0 cPxXuL"
          >
            1
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fTVibh sc-cdlubJ jPQraZ"
      >
        dog
      </span>
    </div>
  </div>
</div>
`;
